--- a/style.css
+++ b/style.css
@@ -75,6 +75,9 @@ h4 {
     width: 150px;
     display: table;
 }
+#two{
+    text-align: left;
+}
   .parent{
     border: 3px solid #fff;
     padding: 20px;
